# ModToolBox

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README_zh.md
lang/: en.json  zh.json
src/: main.cpp
src/core/: app_state.hpp  config.cpp  config.hpp  gradle.cpp  gradle.hpp  localization.cpp  localization.hpp  project.cpp  project.hpp
src/ui/: build_menu.cpp  build_menu.hpp  config_menu.cpp  config_menu.hpp  main_menu.cpp  main_menu.hpp  texture_editor.cpp  texture_editor.hpp  tools_menu.cpp  tools_menu.hpp
